[MOJ-164] opdrachten met JDK preview features kunnen compilen en valideren