@@ -320,6 +320,12 @@ public class CompileService {
                 List<String> cmd = new ArrayList<>();
                 cmd.add(javaVersion.getCompiler().toString());
                 cmd.add("-Xlint:all");
+                if (javaVersion.getVersion()>12) {
+                    cmd.add("--enable-preview");
+                    cmd.add("--release");
+                    cmd.add("" +javaVersion.getVersion());
+                }
+
                 cmd.add("-encoding");
                 cmd.add("UTF8");
                 cmd.add("-g:source,lines,vars");
